@startuml Rating Class Diagram

entity User {
    + id : UUID <PK>
    --
    - username : String <unique> 
    - email : String <unique>
    - password : String

    - role : Role
    
    - createdAt : Date
    - updatedAt : Date

    - isActive : Boolean
    - emailVerified : Boolean
    - lastLoginAt : Date
}

entity Document {
    + id : UUID <PK>
    --
    + userId : UUID <FK>
    + categoryId : UUID <FK>
    --
    - title : String
    - description : String?

    - createdAt : Date
    - updatedAt : Date

    - bookmarkCount : int
    - downloadCount : int

    - ratingSum : int
    - ratingCount : int
    - averageRating : float
}

entity Rating {
    + id : UUID <PK>
    --
    + documentId : UUID <FK> <unique>
    + userId : UUID <FK> <unique>
    --
    - score : int

    - createdAt : Date
    - updatedAt : Date
}

User ||--o{ Rating : "gives"
Document ||--o{ Rating : "receives"

@enduml